Moved main UI to new PhotoListContainer2 and fixed some layout issues

--- a/ui/src/static/css/App.css
+++ b/ui/src/static/css/App.css
@@ -42,6 +42,9 @@ footer {
 }
 .main {
   flex-grow: 1;
+  overflow: hidden;
+  background: #1b1b1b;
+  z-index: 1;
 }
 
 .App {
